# riptune

./: .env.sample  .gitignore  AGENTS.md  CONTRIBUTING.md  Changelog.md  LICENSE  README.md  README_MAC.txt  SECURITY.md  biome.json  fix-mac-permissions.command  fix-mac-permissions.sh  index.html  package-lock.json  package.json  setup_bin.ps1  setup_bin.sh  tailwind.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: checks.yml  release.yml
scripts/macos/: build.sh  fix-riptune.applescript  fix-riptune.icns  instructions.txt
src/: App.css  App.tsx  essentia.d.ts  i18n.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_processor.rs  lib.rs  local_server.rs  lyrics.rs  main.rs  reporting.rs  setup.rs  telemetry.rs  updater.rs  utils.rs
src-tauri/src/audio_processor/: analyzer.rs  downloader.rs  fs_utils.rs  mod.rs  models.rs  utils.rs
src/components/: ActionBtn.tsx  AudioPlayer.tsx  BackgroundOrbs.tsx  BugReportModal.tsx  ChangelogModal.tsx  CheckPill.tsx  CustomSelect.tsx  DeleteModal.tsx  FooterLink.tsx  HistoryRow.tsx  HomeDragDropCard.tsx  HomeLatestTrackCard.tsx  HomeUrlInputCard.tsx  LyricsDeleteModal.tsx  LyricsEditorHeader.tsx  LyricsFileItem.tsx  LyricsNewDropdown.tsx  NavItem.tsx  Notifications.tsx  Section.tsx  SettingsAboutSection.tsx  SettingsDirSection.tsx  Sidebar.tsx  StatCard.tsx  TitleBar.tsx  ToggleRow.tsx  TruncatedText.tsx
src/context/: AppContext.tsx  useApp.ts  (+4 more)
(+22 files in other folders)
