[package]
name = "rip-tune"
version = "0.2.2"
description = "RipTune - Analyze and download music from YouTube"
authors = ["HugoSohm"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rip_tune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
id3 = "1.16.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = "0.4.44"
rand = "0.10.0"
base64 = "0.22.1"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
cocoa = "0.26"
objc = "0.2"
